2020-06-01  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] combined edges belonging to a contour together
	and also added overlapping support. (which currently dosen't
	work properly for fonts with cubic bezier curves)

	* sdfgen.h (SDF_Contour): added struct which represent one
	  contour (i.e. a collection of edges)
	* sdfgen.h (SDF_Contour_Orientation, get_contour_orientation):
	  added enum for contour orientation, and a function which can
	  be used to get orientation of a single contour.
	* sdfgen.h (get_min_conour): added function which returns
	  shortest distance from a point to a contour.

2020-05-30  Anuj Verma  <anujv@iitbhilai.ac.in>

	* sdfgen.h (Generate_SDF): added an `spread' parameter
	  which is used to specify the maximum distance value.
	  Any distance greater than it will be discarded.
	  Also, now the distance is calculaed from the center of
	  the pixel (previously is was being calculated from the
	  bottom left corner).

2020-05-30  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] renamed `contour' to `edge' since a contour
	is used to represent a complete connected shape of edges
	of different types.

2020-05-29  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] replaced all `float' by a typedef `SDF_DataType'

	* sdfgen.c (Generate_SDF): fixed a calculation error while
	  white resolving conflict between two endpoints.
	  Now if two curves are equidistant from a point we check if
	  thier endpoints are connected and then use the curve which
	  make higher orthogonality with the point to correctly determine
	  the sign of the point.

2020-05-28  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] finished the algorithm for generating signed
	distnce fields from `FT_Outline'.

	* sdfgen.c (get_min_distance): combined the output of the function
	  to a struct `SDF_Signed_Distance'.

2020-05-27  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] finished the algorithm which return shortest