@@ -1,3 +1,8 @@
+2020-06-17  Anuj Verma  <anujv@iitbhilai.ac.in>
+
+	* sdfgen.c: replaced [`] to ['] to represent derivatives
+	  https://github.com/preversewharf45/freetype2-sdf/issues/1
+
 2020-06-01  Anuj Verma  <anujv@iitbhilai.ac.in>
 
 	[sdf-outline] combined edges belonging to a contour together
